--- a/TodoList.API/TodoList.API.csproj
+++ b/TodoList.API/TodoList.API.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TodoList.Service\TodoList.Service.csproj" />
+  </ItemGroup>
+
 </Project>
