--- a/TodoList.Repository/TodoList.Repository.csproj
+++ b/TodoList.Repository/TodoList.Repository.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TodoList.Core\TodoList.Core.csproj" />
+  </ItemGroup>
+
 </Project>
