Extension CL eklendi ve referanslar güncellendi. Düzenleme yapıldı.

--- a/TodoList.API/TodoList.API.csproj
+++ b/TodoList.API/TodoList.API.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TodoList.Service\TodoList.Service.csproj" />
+    <ProjectReference Include="..\TodoList.Extension\TodoList.Extension.csproj" />
   </ItemGroup>
 
 </Project>
