--- a/TodoList.Extension/TodoList.Extension.csproj
+++ b/TodoList.Extension/TodoList.Extension.csproj
@@ -7,13 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TodoList.Repository\TodoList.Repository.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Mapping\" />
-    <Folder Include="Validations\" />
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\TodoList.Service\TodoList.Service.csproj" />
   </ItemGroup>
 
 </Project>
