Extensions, Handlers, Filters, Modules eklendi.

--- a/TodoList.Extension/TodoList.Extension.csproj
+++ b/TodoList.Extension/TodoList.Extension.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\TodoList.Service\TodoList.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
 </Project>
