Controllers ve gerekli şeyler eklendi.

--- a/TodoList.API/appsettings.json
+++ b/TodoList.API/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "sqlCon": "SERVER=.; DATABASE=TodoDB; MultipleActiveResultSets=true; Integrated Security=true;"
+  },
+  "BasicAuthentication": {
+    "Username": "admin",
+    "Password": "2022"
+  }
 }
